log/build_2026-05-10_07-55-01/dxl_wt_openarm_leader/stdout_stderr.log
Consolidate compiler generated dependencies of target read_write_wt_position_node
[ 33%] Built target pub_position_node
[ 66%] Built target pub_current_node
[ 83%] Building CXX object CMakeFiles/read_write_wt_position_node.dir/src/read_write_wt_position_node.cpp.o
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp: In member function ‘void ReadWriteWTNode::motion_compensation()’:
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:159:20: error: ‘Tc’ was not declared in this scope; did you mean ‘Tc_’?
  159 |     double tau_f = Tc * sign_v + (Ts_[dxl_id-1] - Tc_[dxl_id-1]) * std::exp(-(velocity_ratio * velocity_ratio)) * sign_v + b_[dxl_id-1] * present_vel_rad_s_[dxl_id-1];
      |                    ^~
      |                    Tc_
gmake[2]: *** [CMakeFiles/read_write_wt_position_node.dir/build.make:76: CMakeFiles/read_write_wt_position_node.dir/src/read_write_wt_position_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:141: CMakeFiles/read_write_wt_position_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
